WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212225
Scrolling thread scrolls on sync-scrolling scrollers don't get to the main thread
https://bugs.webkit.org/show_bug.cgi?id=212225
Summary
Scrolling thread scrolls on sync-scrolling scrollers don't get to the main th...
Simon Fraser (smfr)
Reported
2020-05-21 11:42:11 PDT
Scrolling thread scrolls on sync-scrolling scrollers don't get to the main thread
Attachments
Patch
(5.64 KB, patch)
2020-05-21 11:43 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-21 11:43:54 PDT
Created
attachment 399970
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-05-21 19:37:17 PDT
https://trac.webkit.org/changeset/262041/webkit
Simon Fraser (smfr)
Comment 3
2020-05-21 19:37:46 PDT
and
https://trac.webkit.org/r262043
Radar WebKit Bug Importer
Comment 4
2020-05-21 19:38:15 PDT
<
rdar://problem/63524085
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug