Scrolling thread scrolls on sync-scrolling scrollers don't get to the main thread https://bugs.webkit.org/show_bug.cgi?id=212225

Reviewed by Tim Horton.

Some scrolls on nodes with synchronousScrollingReasons failed to set the m_scrolledSinceLastCommit bit,
because ScrollingTreeFrameScrollingNodeMac::currentScrollPositionChanged() bypassed a call to the superclass.

Fix by passing ScrollingLayerPositionAction so that it can just call super.

This will be tested by existing tests after some upcoming scroll snap changes.

* page/scrolling/ScrollingTreeScrollingNode.cpp:
(WebCore::ScrollingTreeScrollingNode::currentScrollPositionChanged):
* page/scrolling/ScrollingTreeScrollingNode.h:
* page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.h:
* page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.mm:
(WebCore::ScrollingTreeFrameScrollingNodeMac::currentScrollPositionChanged):

Canonical link: https://commits.webkit.org/225109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262041 268f45cc-cd09-0410-ab3c-d52691b4dbfc